# PrivatePay

./: .gitignore  AUTO_SWEEP_IMPLEMENTATION.md  CURRENT_STATUS_AND_NEXT_STEPS.md  GAS_ABSTRACTION_IMPLEMENTATION_PLAN.md  LICENSE  PROGRESS.md  PROGRESS_note.md  README.md  TESTING.md  package.json  pnpm-lock.yaml
backend/: .env.example  Cargo.toml
backend/auto-sweep-service/: .env.example  auto_sweep.db  package.json  pnpm-lock.yaml
backend/auto-sweep-service/src/: config.ts  database.ts  index.ts  monitor.ts  relayer.ts
backend/src/: main.rs
contracts/: .env.example  deployments.json  foundry.toml
contracts/broadcast/Protocol.s.sol/84532/: run-latest.json
contracts/script/: Protocol.s.sol
contracts/src/: Deployer.sol  Wallet.sol
contracts/src/interface/: IDeployer.sol
contracts/test/: Deployer.t.sol  Wallet.t.sol
frontend/: .env.example  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/pay/[id]/: page.tsx
frontend/components/: ActivityFeed.tsx  AutoSweepToggle.tsx  CreatePaymentLink.tsx  GeneratePayment.tsx  Navbar.tsx  SmartWalletConnect.tsx  SweepFunds.tsx  SweepHistory.tsx  WalletHistory.tsx
frontend/lib/: basename.ts  config.ts  wagmi.ts
