[package]
name = "privatepay-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }

# Ethereum
alloy = { version = "0.3", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
hex = "0.4"
dotenv = "0.15"
anyhow = "1.0"
rand = "0.8"
reqwest = "0.12.24"
chrono = "0.4"
